wordpress/k8s/wordpress-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    meta.helm.sh/release-name: wp
    meta.helm.sh/release-namespace: default
  creationTimestamp: "2025-08-21T05:49:53Z"
  finalizers:
  - service.k8s.aws/resources
  labels:
    app.kubernetes.io/instance: wp
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: wordpress
    app.kubernetes.io/version: 6.8.2
    helm.sh/chart: wordpress-26.0.0
  name: wp-wordpress
  namespace: default
  resourceVersion: "14683761"
  uid: 64195af0-8bee-4d13-83f9-b592c9f13d18
spec:
  clusterIP: 172.20.195.194
  clusterIPs:
  - 172.20.195.194
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: http
  - name: https
    port: 443
    protocol: TCP
    targetPort: https
  selector:
    app.kubernetes.io/instance: wp
    app.kubernetes.io/name: wordpress
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
